# contracts

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  crates.js  flake.nix  help.html  index-old.html  justfile  renovate.json  settings.html  src-files.js
.github/: CODEOWNERS
.github/workflows/: branches.yaml  build.yaml  cache-deps.yaml  checks-zizmor.yaml  checks.yaml  clean-pr.yaml  merge.yaml  open-pr.yaml  pr.yaml  release.yaml  tests.yaml
audits/sc-audit-01-2026/: workspace.dsl
audits/sc-audit-01-2026/docs/: 01-overview.md  02-response-to-audit-202602.md
audits/sc-audit-08-2024/docs/: 01-overview.md
docs/: _config.yml  index.md
ethereum/: README.md
ethereum/bindings/: Cargo.toml  build.rs  contracts-addresses.json
ethereum/bindings/src/: config.rs  constants.rs  errors.rs  lib.rs  methods.rs  utils.rs
ethereum/bindings/src/codegen/: hopr_announcements.rs  hopr_announcements_events.rs  hopr_announcements_proxy.rs  hopr_boost.rs  hopr_capability_permissions.rs  hopr_channels.rs  hopr_ledger.rs  hopr_ledger_events.rs  hopr_node_management_module.rs  hopr_node_safe_migration.rs  hopr_node_safe_migration_events.rs  hopr_node_safe_registry.rs  hopr_node_stake_factory.rs  hopr_ticket_price_oracle.rs  hopr_token.rs  hopr_winning_probability_oracle.rs  mod.rs
ethereum/contracts/: .env.example  Makefile  foundry.in.toml  remappings.txt
hopr_bindings/: all.html  index.html  sidebar-items.js
hopr_bindings/config/: constant.CONTRACTS_ADDRESSES_FILE_CONTENT.html  index.html  sidebar-items.js  struct.ContractAddresses.html  struct.NetworksWithContractAddresses.html  struct.SingleNetworkContractAddresses.html
hopr_bindings/constants/: constant.DEFAULT_ANNOUNCEMENT_PERMISSIONS.html  constant.DEFAULT_CAPABILITY_PERMISSIONS.html  constant.DEFAULT_NODE_PERMISSIONS.html  constant.DEPLOYSAFEANDMODULEANDINCLUDENODES_IDENTIFIER.html  constant.DEPLOYSAFEMODULE_FUNCTION_IDENTIFIER.html  constant.DOMAIN_SEPARATOR_TYPEHASH.html  constant.ERC_1820_DEPLOYER.html  constant.ERC_1820_REGISTRY_DEPLOY_CODE.html  constant.ERC_1820_SIGNED_DEPLOYMENT_TX.html  constant.ERC_1967_PROXY_CREATION_CODE.html  constant.ETH_VALUE_FOR_ERC1820_DEPLOYER.html  constant.ETH_VALUE_FOR_MULTICALL3_DEPLOYER.html  constant.INIT_KEY_BINDING_FEE.html  constant.MULTICALL3_DEPLOYER.html  constant.MULTICALL3_DEPLOY_CODE.html  constant.SAFE_COMPATIBILITYFALLBACKHANDLER_ADDRESS.html  constant.SAFE_COMPATIBILITY_FALLBACK_HANDLER_ADRESS_V150.html  constant.SAFE_COMPATIBILITY_FALLBACK_HANDLER_DEPLOY_CODE_V141.html  constant.SAFE_COMPATIBILITY_FALLBACK_HANDLER_DEPLOY_CODE_V150.html  constant.SAFE_DEPLOYER_ADDRESS.html  constant.SAFE_DEPLOYER_BALANCE.html  constant.SAFE_DIAMOND_PROXY_SINGLETON_DEPLOY_CODE.html  constant.SAFE_MULTISEND_ADDRESS.html  constant.SAFE_MULTISEND_CALL_ONLY_DEPLOY_CODE.html  constant.SAFE_MULTISEND_DEPLOY_CODE.html  constant.SAFE_PROXY_FACTORY_DEPLOY_CODE.html  constant.SAFE_SAFEPROXYFACTORY_ADDRESS.html  constant.SAFE_SAFE_L2_ADDRESS.html  constant.SAFE_SINGLETON_ADDRESS.html  constant.SAFE_SINGLETON_ADDRESS_V141.html  constant.SAFE_SINGLETON_L2_ADDRESS_V141.html  constant.SAFE_SINGLETON_L2_ADDRESS_V150.html  constant.SAFE_TX_TYPEHASH.html  constant.SENTINEL_OWNERS.html  index.html  sidebar-items.js  static.SAFE_SINGLETON_DEPLOY_CODE_V141.html  static.SAFE_SINGLETON_L2_DEPLOY_CODE_V141.html  static.SAFE_SINGLETON_L2_DEPLOY_CODE_V150.html
hopr_bindings/exports/: index.html
hopr_bindings/hopr_announcements/: index.html  sidebar-items.js
hopr_bindings/hopr_announcements_events/: index.html
hopr_bindings/hopr_announcements_proxy/: index.html  sidebar-items.js
hopr_bindings/hopr_boost/: index.html
hopr_bindings/hopr_capability_permissions/: index.html
hopr_bindings/hopr_channels/: index.html  sidebar-items.js
hopr_bindings/hopr_channels_events/: index.html  sidebar-items.js
hopr_bindings/hopr_crypto/: index.html
hopr_bindings/hopr_ledger/: index.html
hopr_bindings/hopr_ledger_events/: index.html  sidebar-items.js
hopr_bindings/hopr_node_management_module/: index.html
hopr_bindings/hopr_node_safe_migration/: index.html  sidebar-items.js
hopr_bindings/hopr_node_safe_migration_events/: index.html  sidebar-items.js
hopr_bindings/hopr_node_safe_registry/: index.html
hopr_bindings/hopr_node_safe_registry_events/: index.html
hopr_bindings/hopr_node_stake_factory/: index.html
hopr_bindings/hopr_node_stake_factory_events/: index.html  sidebar-items.js
hopr_bindings/hopr_ticket_price_oracle/: index.html
hopr_bindings/hopr_ticket_price_oracle_events/: index.html
hopr_bindings/hopr_token/: index.html
hopr_bindings/hopr_winning_probability_oracle/: index.html
hopr_bindings/hopr_winning_probability_oracle_events/: index.html
hopr_contract_addresses/: all.html  fn.main.html  index.html
search.index/: 000648fead6d.js  00329dfd57ce.js  003a8fcdf47e.js  0073fc788f96.js  007645f32fec.js  01215100b4cc.js  01248d29f2f5.js  02156d1ee819.js  0266b55c04f0.js  02a1c3ee8e48.js  02fad4f7aece.js  0449f968503a.js  049d420e472e.js  049d562a066d.js  04b978980be9.js  0564c46ecf79.js  056b13786055.js  05b6bd9be29a.js  05bccca5bc2f.js  060f71148cfb.js  06ad9b50c263.js  06f3c77ba082.js  080e28d5827e.js  08ad696bfa48.js  09ad4da69bd7.js  09b3625957ec.js  0a09d76e3e5d.js  0a6a599a552d.js  0a89af41edd7.js  0a89f2498e88.js  0b6cdfc055b3.js  0b866f29e237.js  0bb599866a24.js  0caef81fa33c.js  0d143f4600ef.js  0d9acd2fa5f5.js  0e492d36385b.js  0ecbcc3908db.js  0f741d0065be.js  0f7671d3fcca.js  (+300 more)
search.index/crateNames/: a09bd6cc40f1.js
search.index/desc/: f09f5f819f90.js
search.index/entry/: 03ea081f2c97.js  0ac2ef08a9a4.js  d7d5026e4d54.js  fe34957f3d5e.js
search.index/function/: 41fd591f0ba1.js  49f2a71e6dad.js
search.index/generic_inverted_index/: 63156fcaca77.js
search.index/name/: 1cb4bcea324d.js
search.index/normalizedName/: e9c62a15a0af.js
search.index/path/: 8779543f5ac8.js
search.index/type/: 355cc2c9be2e.js
src/hopr_bindings/: config.rs.html  constants.rs.html  lib.rs.html
src/hopr_contract_addresses/: hopr-contract-addresses.rs.html
(+2083 files in other folders)
