[workspace]

resolver = "2"

members = ["ethereum/bindings"]

[workspace.dependencies]
alloy = { version = "=1.0.42", default-features = false, features = [
  "essentials",
  "json-rpc",
  "node-bindings",
  "contract",
  "k256",
  "std",
] }
anyhow = "1.0.100"
const_format = "0.2.35"
env_logger = "0.11.8"
hex-literal = "1.1.0"
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = { version = "3.16.1" }
serde_json = { version = "1.0.145" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "tracing",
] }
tracing = { version = "0.1.43" }

hopr-bindings = { path = "ethereum/bindings", default-features = false }
hopr-chain-types = { git = "https://github.com/hoprnet/hoprnet", branch = "master" }
hopr-crypto-keypair = { git = "https://github.com/hoprnet/hoprnet", branch = "master", features = [
  "to-file",
] }
hopr-crypto-types = { git = "https://github.com/hoprnet/hoprnet", branch = "master" }
hopr-internal-types = { git = "https://github.com/hoprnet/hoprnet", branch = "master" }
hopr-primitive-types = { git = "https://github.com/hoprnet/hoprnet", branch = "master" }


[profile.dev]
panic = "abort"

# this profile focuses on the speed of compilation
[profile.candidate]
inherits = "release"
codegen-units = 16   # normal release default
lto = false          # do the smallest amount of link-time optimization
panic = "abort"
strip = true
opt-level = 2

# perform minimal optimizations to prevent stack overflows in large tests
[profile.test]
opt-level = 1

# this profile focuses on the best runtime performance and the smallest binary size
[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
opt-level = 3

# uses extended debug symbols for profiling but does not harm benchmarking performance
[profile.bench]
debug = 2
split-debuginfo = "off"
strip = false
